load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load("@rules_foreign_cc//toolchains/native_tools:native_tools_toolchain.bzl", "native_tool_toolchain")
load("//fips:sysroot.bzl", "prebuilt_musl_sysroot")
load(
    "//fips:toolbox.bzl",
    "foreign_perl",
    "foreign_toolbox",
    "foreign_toolbox_shell",
    "hermetic_make",
    "hermetic_musl_toolchain",
)
load(":cc_toolchain.bzl", "fips_cc_toolchain_config", "musl_static_link_smoke")
load(
    ":defs.bzl",
    "fips_platform_toolchain",
)

package(default_visibility = ["//visibility:public"])

hermetic_musl_toolchain(
    name = "llvm_musl",
    marker = "@fips_llvm_musl_amd64//:usr/bin/clang",
    toolchain = "@fips_llvm_musl_amd64//:sysroot",
)

musl_static_link_smoke(
    name = "musl_static_link_smoke",
    clang = ":llvm_musl/bin/clang",
    clang_tools = ":llvm_musl",
    ld = ":llvm_musl/bin/ld.lld",
    sysroot = "@musl_amd64_sysroot//:sysroot",
    sysroot_marker = "@musl_amd64_sysroot//:usr/include/stdio.h",
)

filegroup(
    name = "foreign_cc_amd64_files",
    srcs = [
        ":llvm_musl",
        "@musl_amd64_sysroot//:sysroot",
    ],
)

filegroup(
    name = "foreign_cc_arm64_files",
    srcs = [
        ":llvm_musl",
        "@musl_arm64_sysroot//:sysroot",
    ],
)

fips_cc_toolchain_config(
    name = "foreign_cc_amd64_config",
    ar = ":llvm_musl/bin/ar",
    arch = "x86_64",
    clang = ":llvm_musl/bin/clang",
    ld = ":llvm_musl/bin/ld.lld",
    nm = ":llvm_musl/bin/nm",
    objdump = ":llvm_musl/bin/objdump",
    strip = ":llvm_musl/bin/strip",
    sysroot_marker = "@musl_amd64_sysroot//:usr/include/stdio.h",
    target_triplet = "x86_64-linux-musl",
)

fips_cc_toolchain_config(
    name = "foreign_cc_arm64_config",
    ar = ":llvm_musl/bin/ar",
    arch = "aarch64",
    clang = ":llvm_musl/bin/clang",
    ld = ":llvm_musl/bin/ld.lld",
    nm = ":llvm_musl/bin/nm",
    objdump = ":llvm_musl/bin/objdump",
    strip = ":llvm_musl/bin/strip",
    sysroot_marker = "@musl_arm64_sysroot//:usr/include/stdio.h",
    target_triplet = "aarch64-linux-musl",
)

[
    cc_toolchain(
        name = "foreign_cc_%s_impl" % arch,
        all_files = ":foreign_cc_%s_files" % arch,
        ar_files = ":foreign_cc_%s_files" % arch,
        as_files = ":foreign_cc_%s_files" % arch,
        compiler_files = ":foreign_cc_%s_files" % arch,
        dwp_files = ":foreign_cc_%s_files" % arch,
        linker_files = ":foreign_cc_%s_files" % arch,
        objcopy_files = ":foreign_cc_%s_files" % arch,
        strip_files = ":foreign_cc_%s_files" % arch,
        supports_param_files = 1,
        toolchain_config = ":foreign_cc_%s_config" % arch,
    )
    for arch in [
        "amd64",
        "arm64",
    ]
]

toolchain(
    name = "foreign_cc_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":foreign_cc_amd64_impl",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "foreign_cc_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    toolchain = ":foreign_cc_arm64_impl",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

prebuilt_musl_sysroot(
    name = "musl_amd64",
    arch = "amd64",
    compiler_rt_license = "@compiler_rt_22_1_3_license//file",
    marker = "@musl_amd64_sysroot//:usr/include/stdio.h",
    musl_license = "@musl_src//:COPYRIGHT",
    sysroot = "@musl_amd64_sysroot//:sysroot",
)

prebuilt_musl_sysroot(
    name = "musl_arm64",
    arch = "arm64",
    compiler_rt_license = "@compiler_rt_22_1_3_license//file",
    marker = "@musl_arm64_sysroot//:usr/include/stdio.h",
    musl_license = "@musl_src//:COPYRIGHT",
    sysroot = "@musl_arm64_sysroot//:sysroot",
)

hermetic_make(
    name = "hermetic_make",
)

foreign_toolbox(
    name = "foreign_toolbox",
)

foreign_toolbox_shell(
    name = "foreign_toolbox_shell",
    toolbox = ":foreign_toolbox",
)

foreign_perl(
    name = "foreign_perl",
)

native_tool_toolchain(
    name = "foreign_make_impl",
    env = {"RULES_FIPS_EXEC_ROOT": "$$EXT_BUILD_ROOT$$"},
    path = "$(execpath :hermetic_make)",
    target = ":hermetic_make",
)

[
    (
        filegroup(
            name = "foreign_%s_stub" % tool,
            srcs = ["@fips_busybox_exec//:bin/busybox.static"],
        ),
        native_tool_toolchain(
            name = "foreign_%s_impl" % tool,
            path = "$(execpath :foreign_%s_stub)" % tool,
            target = ":foreign_%s_stub" % tool,
        ),
    )
    for tool in [
        "autoconf",
        "automake",
        "m4",
        "pkgconfig",
    ]
]

toolchain(
    name = "foreign_make_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":foreign_make_impl",
    toolchain_type = "@rules_foreign_cc//toolchains:make_toolchain",
)

[
    toolchain(
        name = "foreign_%s_toolchain" % tool,
        exec_compatible_with = [
            "@platforms//cpu:x86_64",
            "@platforms//os:linux",
        ],
        toolchain = ":foreign_%s_impl" % tool,
        toolchain_type = "@rules_foreign_cc//toolchains:%s_toolchain" % tool,
    )
    for tool in [
        "autoconf",
        "automake",
        "m4",
        "pkgconfig",
    ]
]

fips_platform_toolchain(
    name = "linux_amd64_impl",
    ar = ":llvm_musl/bin/ar",
    arch = "amd64",
    clang = ":llvm_musl/bin/clang",
    clang_tools = ":llvm_musl",
    clangxx = ":llvm_musl/bin/clang++",
    go = "@fips_go_amd64//sysroot:sysroot",
    ld = ":llvm_musl/bin/ld.lld",
    musl = ":musl_amd64",
    musl_source = "@musl_src//:srcs",
    musl_source_marker = "@musl_src//:COPYRIGHT",
    nm = ":llvm_musl/bin/nm",
    objcopy = ":llvm_musl/bin/objcopy",
    objdump = ":llvm_musl/bin/objdump",
    openssl_target = "linux-x86_64",
    qemu_aarch64 = "@fips_qemu_aarch64//:usr/bin/qemu-aarch64",
    ranlib = ":llvm_musl/bin/ranlib",
    readelf = ":llvm_musl/bin/readelf",
    strip = ":llvm_musl/bin/strip",
)

fips_platform_toolchain(
    name = "linux_arm64_cross_impl",
    ar = ":llvm_musl/bin/ar",
    arch = "arm64",
    clang = ":llvm_musl/bin/clang",
    clang_tools = ":llvm_musl",
    clangxx = ":llvm_musl/bin/clang++",
    go = "@fips_go_amd64//sysroot:sysroot",
    ld = ":llvm_musl/bin/ld.lld",
    musl = ":musl_arm64",
    musl_source = "@musl_src//:srcs",
    musl_source_marker = "@musl_src//:COPYRIGHT",
    nm = ":llvm_musl/bin/nm",
    objcopy = ":llvm_musl/bin/objcopy",
    objdump = ":llvm_musl/bin/objdump",
    openssl_target = "linux-aarch64",
    qemu_aarch64 = "@fips_qemu_aarch64//:usr/bin/qemu-aarch64",
    ranlib = ":llvm_musl/bin/ranlib",
    readelf = ":llvm_musl/bin/readelf",
    strip = ":llvm_musl/bin/strip",
)

toolchain(
    name = "linux_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":linux_amd64_impl",
    toolchain_type = "//fips:toolchain_type",
)

toolchain(
    name = "linux_arm64_cross_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
    toolchain = ":linux_arm64_cross_impl",
    toolchain_type = "//fips:toolchain_type",
)
